# cpp-observe

./: .gitignore  Build_vs2019_Install.bat  Build_vs2019_Tests_Debug.bat  Build_vs2019_Tests_Release.bat  Build_windows_64.bat  Build_windows_64_Debug.bat  Build_windows_64_Release.bat  CMakeLists.txt  LICENSE  README.md  Run_Conan.bat  Run_tests.bat  Run_tests_debug.bat  Run_tests_release.bat  conanfile.txt
cmake/: cpp_observeConfig.cmake.in
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
include/: cpp_observe.hpp
include/observe/: cpp_observe.hpp
source/tests/src/: observer_tests.cpp
src/: Templated_observer.h  main.cpp  observer_tests.cpp
